# ICE

./: Cargo.toml  build_shaders.sh  vert.spirv
assets/models/: shapes.mtl
assets/shaders/: frag.spirv  shader.frag  shader.vert  vert.spirv
src/: main.rs
src/vrt/: app.rs  buffer.rs  camera.rs  debug.rs  descriptor_pool.rs  device.rs  fps_camera.rs  frame_info.rs  game_object.rs  layout.rs  mod.rs  model.rs  pipeline.rs  queue.rs  renderer.rs  result.rs  swapchain.rs  sync.rs  triangle_render_system.rs  vertex.rs  window.rs
src/vrt/device/: buffer.rs  device.rs  mod.rs  queue.rs  swapchain.rs
src/vrt/device/descriptors/: descriptor_pool.rs  layout.rs  mod.rs
src/vrt/graphics/: mod.rs  model.rs  pipeline.rs  renderer.rs  triangle_render_system.rs  vertex.rs
src/vrt/graphics/shader/: loader.rs
src/vrt/graphics/utils/: pipeline.rs
src/vrt/render_systems/: mod.rs  simple_render_system.rs  triangle_render_system.rs
src/vrt/utils/: debug.rs  mod.rs  result.rs
