[package]
name = "vulksim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
erupt = "0.21.0+202"
color-eyre = "0.5"
flexi_logger = "0.22"
log = "0.4"
glam = "0.21.3"
dolly = "0.3.1"
pretty_env_logger = "0.5.0"
tobj = "4.0.0"
